--- a/Practica 1/Practica 1.ioc
+++ b/Practica 1/Practica 1.ioc
@@ -27,6 +27,7 @@ MxCube.Version=6.9.2
 MxDb.Version=DB.6.0.92
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.EXTI0_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -36,11 +37,11 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-PA0-WKUP.GPIOParameters=GPIO_PuPd,GPIO_Label
-PA0-WKUP.GPIO_Label=BUTTON
+PA0-WKUP.GPIOParameters=GPIO_PuPd,GPIO_ModeDefaultEXTI
+PA0-WKUP.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PA0-WKUP.GPIO_PuPd=GPIO_PULLUP
 PA0-WKUP.Locked=true
-PA0-WKUP.Signal=GPIO_Input
+PA0-WKUP.Signal=GPXTI0
 PA1.GPIOParameters=GPIO_Label
 PA1.GPIO_Label=LED1
 PA1.Locked=true
@@ -108,5 +109,7 @@ RCC.VCOI2SOutputFreq_Value=192000000
 RCC.VCOInputFreq_Value=1000000
 RCC.VCOOutputFreq_Value=192000000
 RCC.VcooutputI2S=96000000
+SH.GPXTI0.0=GPIO_EXTI0
+SH.GPXTI0.ConfNb=1
 board=custom
 isbadioc=false
