--- a/Prueba 1 STM32F429/Prueba 1 STM32F429.ioc
+++ b/Prueba 1 STM32F429/Prueba 1 STM32F429.ioc
@@ -3,6 +3,7 @@ CAD.formats=
 CAD.pinconfig=
 CAD.provider=
 File.Version=6
+GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.CPN=STM32F429ZIT6
 Mcu.Family=STM32F4
@@ -113,6 +114,7 @@ MxCube.Version=6.9.2
 MxDb.Version=DB.6.0.92
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.EXTI0_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -122,10 +124,9 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_0
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-PA0/WKUP.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
-PA0/WKUP.GPIO_Label=B1 [Blue PushButton]
-PA0/WKUP.GPIO_ModeDefaultEXTI=GPIO_MODE_EVT_RISING
-PA0/WKUP.GPIO_PuPd=GPIO_NOPULL
+PA0/WKUP.GPIOParameters=GPIO_PuPd,GPIO_ModeDefaultEXTI
+PA0/WKUP.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING
+PA0/WKUP.GPIO_PuPd=GPIO_PULLDOWN
 PA0/WKUP.Locked=true
 PA0/WKUP.Signal=GPXTI0
 PA1.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
